--- a/CFD-openpipeflow-1.21-P/README
+++ b/CFD-openpipeflow-1.21-P/README
@@ -1,4 +1,4 @@
-**Nominal Instructions**
+Nominal Instructions
 *The script to submit to slurm is "script_nocona.sh". Modify it suitably in case you're running it on another cluster than the "Nocona" partition at TTU HPCC.
 *The script "modules_to_loaded.sh" consists of all the modules that need to be loaded. So please ensure you have replacement modules included in the if running on any other system than the "Nocona" partition at TTU HPCC.
 *Use "source" command to execute the modules_to_loaded file in case you're running interactively.
